--- a/html/bytecode.html
+++ b/html/bytecode.html
@@ -1199,7 +1199,7 @@ prevent and handle errors.</p>
 <p>When you&#8217;re building a UI, you have to choose which framework to use,
 and many of those are specific to one OS. There are cross-platform UI
 toolkits too, but those often get ubiquity at the expense of
-familiarity&#8202;&mdash;&#8202;they feel equally weird on all of platforms.</p>
+familiarity&#8202;&mdash;&#8202;they feel equally foreign on all of platforms.</p>
 </li>
 </ul>
 </li>
