--- a/html/observer.html
+++ b/html/observer.html
@@ -677,7 +677,7 @@ concerns&#8221; and &#8220;coherence and cohesion&#8221; and &#8220;modularity&#
 <p>The observer pattern is a great way to let those mostly unrelated lumps talk to
 each other without them merging into one big lump. It&#8217;s less useful <em>within</em> a
 single lump of code dedicated to one feature or aspect.</p>
-<p>That&#8217;s why it fit our example well: achievements and physics are almost entirely
+<p>That&#8217;s why it fits our example well: achievements and physics are almost entirely
 unrelated domains, likely implemented by different people. We want the bare
 minimum of communication between them so that working on either one doesn&#8217;t
 require much knowledge of the other.</p>
