Fix typo in Observer.

--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -398,7 +398,7 @@ Method</a> pattern.</p>
 </aside>
 
 <p>Actors can also interact with each other, if by &#8220;interacting&#8221;, we mean &#8220;they can
-slap each other around.&#8221; When updating, the actor can call <code>slap()</code> on another
+slap each other around&#8221;. When updating, the actor can call <code>slap()</code> on another
 actor to slap it and call <code>wasSlapped()</code> to determine if it has been slapped.</p>
 <p>The actors need a stage where they can interact, so let&#8217;s build that:</p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">Stage</span>
