--- a/html/introduction.html
+++ b/html/introduction.html
@@ -50,7 +50,7 @@ which was often, we started over from the beginning.</p>
 <p>At the back of the stack of pages was a real monster: a program that took up
 several dense pages of code. It took a while before we worked up the courage
 to even try it, but it was irresistible&#8202;&mdash;&#8202;the title above the listing was
-&#8220;Tunnels and Trolls.&#8221; We had no idea what it did, but it sounded like a game,
+&#8220;Tunnels and Trolls&#8221;. We had no idea what it did, but it sounded like a game,
 and what could be cooler than a computer game that you programmed yourself?</p>
 <p>We never did get it running, and after a year, we moved out of that classroom.
 (Much later when I actually knew a bit of BASIC, I realized that it was just a
@@ -70,7 +70,7 @@ good chance this would be a herpetology book instead of a programming one.</p>
 
 <p>At first, the challenge was just getting something on screen. Then, it became
 figuring out how to write programs bigger than what would fit in my head. Instead
-of just reading about &#8220;How to Program in C++,&#8221; I started trying to find books
+of just reading about &#8220;How to Program in C++&#8221;, I started trying to find books
 about how to <em>organize</em> programs.</p>
 <p>Fast-forward several years, and a <span name="friend">friend</span> hands me a
 book: <em>Design Patterns: Elements of Reusable Object-Oriented Software</em>.
@@ -172,7 +172,7 @@ describe solutions in other fields. <em>Design Patterns</em> is the Gang of Four
 attempt to do that for software.</p>
 </aside>
 
-<p>By calling this book &#8220;Game Programming Patterns,&#8221; I&#8217;m not trying to imply that
+<p>By calling this book &#8220;Game Programming Patterns&#8221;, I&#8217;m not trying to imply that
 the Gang of Four&#8217;s book is <span name="nongames">inapplicable</span> to games.
 On the contrary: the <a href="design-patterns-revisited.html">Design Patterns Revisited</a>
 section of this book covers many of the patterns from <em>Design
