--- a/html/observer.html
+++ b/html/observer.html
@@ -671,7 +671,7 @@ think about <em>both</em> sides of some communication in order to understand a p
 the program, don&#8217;t use the Observer pattern to express that linkage. Prefer
 something more explicit.</p>
 <p>When you&#8217;re hacking on some big program, you tend to have lumps of it that you
-work on all together. We&#8217;ve lots of terminology for this like &#8220;separation of
+work on all together. We have lots of terminology for this like &#8220;separation of
 concerns&#8221; and &#8220;coherence and cohesion&#8221; and &#8220;modularity&#8221;, but it boils down to
 &#8220;this stuff goes together and doesn&#8217;t go with this other stuff&#8221;.</p>
 <p>The observer pattern is a great way to let those mostly unrelated lumps talk to
