--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -338,7 +338,7 @@ whatsoever.</p>
 <aside name="include">
 
 <p>Concretely, this means each source file for a subclass would only need a single
-<code>#include</code>: the one for its base class.</p>
+<code>#include</code>&#8202;&mdash;&#8202;the one for its base class.</p>
 </aside>
 
 <p>Between these two points, there&#8217;s a wide middle ground where some operations are
