Add sentence to Dirty Flag.

--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -633,7 +633,8 @@ I&#8217;ll refrain.</p>
     and you&#8217;ll have to send the whole thing to the server.</p>
 </li>
 <li>
-<p><em>Less memory is used for storing dirty flags.</em></p>
+<p><em>Less memory is used for storing dirty flags.</em> Add ten barrels to a deck
+    and you only need a single bit to track them all.</p>
 </li>
 <li>
 <p><em>Less time is spent on fixed overhead.</em> When processing some changed data,
